force-app/main/default/objects/Volume_Discount__c/Volume_Discount__c.object-meta.xml
<CustomObject>
    <label>Volume Discount</label>
    <nameField>
        <displayFormat>VD-{0000000000}</displayFormat>
        <label>Volume Discount Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Volume Discounts</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>