force-app/main/default/objects/Volume_Discount__c/fields/DuplicateManagement_TotalQuantity_Discou__c.field-meta.xml
<CustomField>
    <fullName>DuplicateManagement_TotalQuantity_Discou__c</fullName>
    <label>DuplicateManagement-TotalQuantity+Discou</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>