force-app/main/default/objects/Volume_Discount__c/fields/Total_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Total_Quantity__c</fullName>
    <label>Total Quantity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>21-100</fullName>
            </value>
            <value>
                <fullName>101-500</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>