force-app/main/default/objects/Volume_Discount__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Product__c</columns>
    <columns>Total_Quantity__c</columns>
    <columns>Discount__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>